Form text not showing. Fix

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -552,14 +552,11 @@ table {
     display           : block;
     width             : 200px;
     margin            : 0 auto;
-    padding           : 5px;
+    padding           : 3px;
     border            : none !important;
     font-family       : "Photina MT", "Sans-serif";
-    font-size         : 14px;
     text-align        : center;
     appearance        : none;
-    -webkit-appearance: none;
-    -moz-appearance   : none;
     background-color  : white;
     background-image  : none;
     outline           : none;
